[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gui/effect_area.png" type="Texture" id=1]
[ext_resource path="res://scripts/GridSlot.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/chubby-choo-regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 13 )

[node name="GridSlot" type="MarginContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Holder" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Holder/CenterContainer"]
margin_left = 9.0
margin_top = 6.0
margin_right = 22.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "+1"
align = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[node name="SelectedArea" type="ColorRect" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.0980392, 0.631373, 0.482353, 0.266667 )

[node name="Marker" type="Position2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
